# bufsd

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  basic_example.cpp
include/bufsd/: deserializable.h  deserializer.h  serializable.h  serializer.h  utils.h
src/: deserializer.cpp  main.cpp  utils.cpp
